TestSuite/errors/err0371_static_predefinition.pas
// #2266
type
  T1 = class;
  
  {T2 = class
    tt: T1;
  end;}
  
  T1 = static class
    //public static a: integer;
  end;
begin
end.